[package]
name = "tnt"
version = "2.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = "1.0"
anyhow = "1.0"
tokio = { version = "1.12", features = ["full"] }
tracing-subscriber = "0.2"
derive_builder = "0.11"
regex = "1.6"
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.13"
tracing = "0.1"
tokio-postgres = "0.7"
chrono = { version = "0.4", features = ["serde"] }
magic-crypt = "3.1.12"
axum = "0.7.4"
[target.'cfg(unix)'.dependencies]
rdkafka = "0.28"
